unpackaged/main/default/objects/Billing_Entity__c/Billing_Entity__c.object-meta.xml
<CustomObject>
    <label>Billing Entity</label>
    <nameField>
        <displayFormat>NS-{0000}</displayFormat>
        <label>Netsuite ID Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Entities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>