unpackaged/main/default/objects/Billing_Entity__c/fields/Credit_Status_Auto__c.field-meta.xml
<CustomField>
    <fullName>Credit_Status_Auto__c</fullName>
    <inlineHelpText>Auto Credit Status from Netsuite</inlineHelpText>
    <label>Credit Status (Auto)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Suspension</fullName>
            </value>
            <value>
                <fullName>Pre Suspension</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Watch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>