unpackaged/main/default/objects/Billing_Entity__c/fields/Credit_Status_Manual__c.field-meta.xml
<CustomField>
    <fullName>Credit_Status_Manual__c</fullName>
    <inlineHelpText>Manual Credit Status from Netsuite</inlineHelpText>
    <label>Credit Status (Manual)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prepayment</fullName>
            </value>
            <value>
                <fullName>Payment Arrangement</fullName>
            </value>
            <value>
                <fullName>Liquidation/Administration</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Bad Debt</fullName>
            </value>
            <value>
                <fullName>Dunning Pause</fullName>
            </value>
            <value>
                <fullName>Small bad debt W/O</fullName>
            </value>
            <value>
                <fullName>Expo Pre-Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>