unpackaged/main/default/objects/Billing_Entity__c/fields/Customer_Balance__c.field-meta.xml
<CustomField>
    <fullName>Customer_Balance__c</fullName>
    <inlineHelpText>Total of all invoices not paid from Netsuite</inlineHelpText>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>