unpackaged/main/default/objects/Billing_Entity__c/fields/Customer_Overdue_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Overdue_Date__c</fullName>
    <label>Customer Overdue Date</label>
    <type>Date</type>
</CustomField>