unpackaged/main/default/objects/Billing_Entity__c/fields/Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subsidiary</label>
    <referenceTo>Subsidiary__c</referenceTo>
    <relationshipName>Netsuite_IDs</relationshipName>
    <type>Lookup</type>
</CustomField>