unpackaged/main/default/objects/Billing_Entity__c/fields/Subsidiary_Code__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_Code__c</fullName>
    <formula>Subsidiary__r.Subsidiary_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subsidiary Code</label>
    <type>Text</type>
</CustomField>